--- a/tv.html
+++ b/tv.html
@@ -176,7 +176,7 @@
                     <h2>Genres</h2>
                     <p>Horror, (Zombie-)Apokalypse, Drama, Thriller</p>
                     <h2>Inhalt</h2>
-                    <p>Als der Hilfssheriff Rick Grimes aus einem wochenlangen Koma erwacht, findet er eine völlig veränderte Welt vor, in der Überlebende einer Zombie-Apokalypse vor den allgegenwärtigen Untoten auf der Flucht sind. Rick begibt sich zunächst auf die Suche nach seiner Frau Lori und seinem Sohn Carl, in der Hoffnung, dass diese überlebt haben. Schließlich übernimmt er die Führung einer kleinen Gruppe von Überlebenden auf der Suche nach einer dauerhaften und sicheren Unterkunft. Dabei stellen die überall präsenten Zombies eine ständige Bedrohung dar, doch auch innerhalb der Gruppe brechen immer wieder Konflikte aus.</p>
+                    <p>Als der Hilfssheriff Rick Grimes aus einem wochenlangen Koma erwacht, findet er eine völlig veränderte Welt vor, in der Überlebende einer Zombie-Apokalypse vor den allgegenwärtigen Untoten auf der Flucht sind. Rick begibt sich zunächst auf die Suche nach seiner Frau Lori und seinem Sohn Carl, in der Hoffnung, dass diese überlebt haben. Schließlich übernimmt er die Führung einer kleinen Gruppe von Überlebenden auf der Suche nach einer dauerhaften und sicheren Unterkunft.</p>
                     <h2>Notes</h2>
                     <p>Die ersten drei bis vier Staffeln sind gut.</p>
                 </div>
