--- a/tv.html
+++ b/tv.html
@@ -353,7 +353,7 @@
                     <h2>Genres</h2>
                     <p>Superhero, Drama, Neo-Noir, (Psycho-)Thriller, Crime</p>
                     <h2>Inhalt</h2>
-                    <p>Obwohl Jessica Jones zu den begabten Menschen gehört, hat sie dem Superhelden-Dasein längst den Rücken gekehrt. Mittlerweile lebt sie in einer heruntergekommenen Wohnung im Herzen von New York City und verdient ihren Lebensunterhalt als Privatdetektivin. Jessica leidet unter posttraumatischen Belastungsstörungen, weshalb sie ihre Gefühle und Erinnerung mit Alkohol zu betäuben versucht. Dennoch will Jessica den Kampf gegen die Ungerechtigkeit dieser Welt nicht kampflos aufgegeben. Eines Tages wird Jessica von ihrer Vergangenheit eingeholt: der totgeglaubte Kilgrave, Jessicas Ex-Freund, der mittels Gedankenkontrolle sadistische Spiele treibt, droht ihr Leben und das unschuldiger Menschen zu zerstören. Jessica muss sich erneut ihrem Erzfeind stellen.</p>
+                    <p>Obwohl Jessica Jones zu den begabten Menschen gehört, hat sie dem Superhelden-Dasein längst den Rücken gekehrt. Mittlerweile lebt sie in einer heruntergekommenen Wohnung im Herzen von New York City und verdient ihren Lebensunterhalt als Privatdetektivin. Jessica leidet unter posttraumatischen Belastungsstörungen, weshalb sie ihre Gefühle und Erinnerung mit Alkohol zu betäuben versucht. Dennoch will Jessica den Kampf gegen die Ungerechtigkeit dieser Welt nicht kampflos aufgegeben.</p>
                     <h2>Notes</h2>
                     <p>Ach Jessica. Wird schon.</p>
                 </div>
