--- a/tv.html
+++ b/tv.html
@@ -390,7 +390,7 @@
                     <h2>Genres</h2>
                     <p>Comedy, Sitcom, Crime</p>
                     <h2>Inhalt</h2>
-                    <p>Detective Jake Peralta arbeitet im Polizeirevier 99 in Brooklyn. Er ist aufgeweckt, manchmal kindisch, aber dennoch ein ausgezeichneter Polizist. Auf dem Revier geht es chaotisch und unorthodox zu - bis zu dem Zeitpunkt, an dem der neue Chef Ray Holt die Zügel in die Hand nimmt. Er nimmt Vorschriften und seinen Job sehr ernst und verkörpert das genaue Gegenteil von Jake Peralta. Sein Ziel ist, den 99. Bezirk New Yorks zu einem sicheren Ort und den Chaotentrupp des Police Departments zu einer seriösen Abteilung zu machen. Nach einem anfänglichen Kleinkrieg zwischen den Mitarbeitern und ihrem neuen Chef beginnt das Team zusammenzuarbeiten, wobei es die Polizisten nicht immer schaffen, private Angelegenheiten strikt von beruflichen zu trennen.</p>
+                    <p>Detective Jake Peralta arbeitet im Polizeirevier 99 in Brooklyn. Er ist aufgeweckt, manchmal kindisch, aber dennoch ein ausgezeichneter Polizist. Auf dem Revier geht es chaotisch und unorthodox zu - bis zu dem Zeitpunkt, an dem der neue Chef Ray Holt die Zügel in die Hand nimmt.</p>
                     <h2>Notes</h2>
                     <p>Die perfekte Mischung aus Comedy und Crime.</p>
                 </div>
@@ -412,7 +412,7 @@
                     <h2>Genres</h2>
                     <p>Comedy, Sitcom, Mockumentary</p>
                     <h2>Inhalt</h2>
-                    <p>Drei unkonventionelle und verrückte Familien erleben das tägliche Chaos des Zusammenlebens. Jay Pritchett und seine wesentlich jüngere Frau Gloria erziehen gemeinsam Glorias Sohn Manny. Jays Tochter, die überfürsorgliche Claire, lebt mit ihrem Mann Phil und drei Kindern ein klassisches Familienleben und kümmert sich um den Haushalt und die Erziehung. Jays Sohn Mitchell hat mit seinem Lebensgefährten Cameron ein vietnamesisches Mädchen namens Lily adoptiert. Zusammen bilden sie alle eine liebenswerte bunte Mischung aus Generationen, Ethnien, den verschiedensten Werten, sexuellen Interessen und Problemen.</p>
+                    <p>Drei unkonventionelle und verrückte Familien erleben das tägliche Chaos des Zusammenlebens.</p>
                     <h2>Notes</h2>
                     <p>Killer.</p>
                 </div>
@@ -449,7 +449,7 @@
                     <h2>Genres</h2>
                     <p>Crime, Mystery, Drama, Komödie, Thriller, Abenteuer, Dramedy, Action</p>
                     <h2>Inhalt</h2>
-                    <p>Sherlock Holmes ist ein beratender Detektiv, der seinen Gegenspielern und Mitmenschen stets drei Schritte voraus ist. Dank seiner ungeheuren Beobachtungs-, Auffassung- und Schlussfolgerungsgabe ist er der Londoner Polizei weit überlegen, was ihm durchaus arrogante sowie neurotische Züge verleiht. Gemeinsam mit seinem loyalen Assistenten und besten Freund Dr. John Watson geht der brillante Kopf jeglichen Ungereimtheiten der Geschehnisse in London auf die Spur. Bei seinen Ermittlungen stößt er bei den hohen Tieren im New Scotland Yard selten auf Gegenliebe. Doch das unschlagbare Duo hält so schnell niemand auf. Nicht einmal Sherlocks Erzfeind und ewiger Gegenspieler Jim Moriaty weiß den Meisterdetektiv mit seinem hinterlistigen Masterplan in die Bredouille zu treiben.</p>
+                    <p>Sherlock Holmes ist ein beratender Detektiv, der seinen Gegenspielern und Mitmenschen stets drei Schritte voraus ist. Dank seiner ungeheuren Beobachtungs-, Auffassung- und Schlussfolgerungsgabe ist er der Londoner Polizei weit überlegen, was ihm durchaus arrogante sowie neurotische Züge verleiht. Gemeinsam mit seinem loyalen Assistenten und besten Freund Dr. John Watson geht der brillante Kopf jeglichen Ungereimtheiten der Geschehnisse in London auf die Spur.</p>
                     <h2>Notes</h2>
                     <p>Mega Serie, die in späteren Staffeln bisschen nachlässt.</p>
                 </div>
@@ -460,7 +460,7 @@
                     <h2>Genres</h2>
                     <p>Crime, Drama, (Psycho-)Thriller, Horror</p>
                     <h2>Inhalt</h2>
-                    <p>Dr. Hannibal Lecter ist ein äußerst angesehener Psychiater, der mit dem FBI, konkret mit Will Graham, zusammenarbeitet. Zur selben Zeit führt er ein Doppelleben als Serienmörder und Kannibale, der nichts mehr genießt, als seine Opfer bei einem Glas Wein und Kerzenlicht zu verspeisen. Will Graham arbeitet als Profiler und hat eine sehr ausgeprägte Fähigkeit, sich in Mordszenarien hineinzudenken. Er wählt beim Lösen seiner Fälle stets die Perspektive des Mörders, obwohl ihm Psychiater und Freunde davon abraten. Die beiden arbeiten an unterschiedlichen Fällen, doch je weiter die Ermittlungen voranschreiten, desto gefährlicher wird die Situation. Schließlich ist es nur eine Frage der Zeit, bis das dunkle Geheimnis Hannibals gelüftet wird.</p>
+                    <p>Dr. Hannibal Lecter ist ein äußerst angesehener Psychiater, der mit dem FBI, konkret mit Will Graham, zusammenarbeitet. Zur selben Zeit führt er ein Doppelleben als Serienmörder und Kannibale, der nichts mehr genießt, als seine Opfer bei einem Glas Wein und Kerzenlicht zu verspeisen. Will Graham arbeitet als Profiler und hat eine sehr ausgeprägte Fähigkeit, sich in Mordszenarien hineinzudenken. Er wählt beim Lösen seiner Fälle stets die Perspektive des Mörders, obwohl ihm Psychiater und Freunde davon abraten. Die beiden arbeiten an unterschiedlichen Fällen, doch je weiter die Ermittlungen voranschreiten, desto gefährlicher wird die Situation.</p>
                     <h2>Notes</h2>
                     <p>Die zwei sind canonically in love also slay.</p>
                 </div>
