--- a/tv.html
+++ b/tv.html
@@ -254,7 +254,7 @@
         </div>
 
         <h1 id="scifi" class="cat">Science Fiction</h1>
-        <div class="row">
+        <div class="row triple">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta8.jpg" alt="Alice in Borderland">
                 <div class="focus-content">
@@ -383,7 +383,7 @@
         </div>
 
         <h1 id="comedy" class="cat">Comedy</h1>
-        <div class="row">
+        <div class="row triple">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta10.jpg" alt="Brooklyn 99">
                 <div class="focus-content">
@@ -479,7 +479,7 @@
         </div>
 
         <h1 id="thriller" class="cat">Thriller</h1>
-        <div class="row">
+        <div class="row triple">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta11.jpg" alt="You">
                 <div class="focus-content">
