--- a/tv.html
+++ b/tv.html
@@ -32,6 +32,7 @@
 
     <div class="container">
 
+        <!-- Cat DRAMA -->
         <h1 id="drama" class="cat">Drama</h1>
         <div class="row">
             <div class="column" tabindex="0">
@@ -111,8 +112,31 @@
                     <p>Hidden gem. GEM. Fire-forged friends trope.</p>
                 </div>
             </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta50.jpg" alt="Tiny Pretty Things">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama</p>
+                    <h2>Inhalt</h2>
+                    <p>Eine talentierte junge Tänzerin einer elitären Ballettschule in Chicago wird angegriffen und stirbt, als sie von einem Gebäude stürzt. Ihre Nachfolgerin deckt eine düstere Welt voller Lügen, Verrat und Konkurrenzgedanken auf.</p>
+                    <h2>Notes</h2>
+                    <p>Dein letztes Solo. Ich lieb den Mix aus Ballett und Mord.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta47.jpg" alt="Shameless">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Drama, Dark Comedy</p>
+                    <h2>Inhalt</h2>
+                    <p>Das Alltagsleben der dysfunktionalen Familie Gallagher aus Chicago. Sie gehört der urbanen Unterschicht an und bewohnt ein bescheidenes Einfamilienhaus in der South Side, einem sozialen Brennpunkt der US-Metropole.</p>
+                    <h2>Notes</h2>
+                    <p>Name ist Programm ig.</p>
+                </div>
+            </div>
         </div>
 
+        <!-- Cat HORROR -->
         <h1 id="horror" class="cat">Horror</h1>
         <div class="row">
             <div class="column" tabindex="0">
@@ -194,6 +218,7 @@
             </div>
         </div>
 
+        <!-- Cat Fantasy -->
         <h1 id="fantasy" class="cat">Fantasy</h1>
         <div class="row">
             <div class="column" tabindex="0">
@@ -251,8 +276,64 @@
                     <p>Entertaining! Wednesday ist so ein mood.</p>
                 </div>
             </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta43.jpg" alt="Sandman">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Horror, Drama, Superhero</p>
+                    <h2>Inhalt</h2>
+                    <p>Der Sandmann, ein kosmisches Wesen, das alle Träume kontrolliert, befindet sich jahrhundertelang in Gefangenschaft. Nach seiner Befreiung begibt er sich auf eine Reise, um die Ordnung wiederherzustellen, die bei seiner Abwesenheit abhanden kam.</p>
+                    <h2>Notes</h2>
+                    <p>Ich wünschte ich könnte 100 Jahre schlafen.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta46.jpg" alt="Evil">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Thriller, Drama</p>
+                    <h2>Inhalt</h2>
+                    <p>Eine skeptische Psychologin trifft auf einen Priesteradepten und einen indsturiellen Unternehmer, um unerklärliche Mysterien zu lösen. Dabei gehen sie durch den Arbeitsrüstand der Kirche, um Rätsel zu lösen und Dämonenaustreibungen zu durchforschen.</p>
+                    <h2>Notes</h2>
+                    <p>Das ist als hätten Law and Order, Mindhunter und Supernatural geheiratet.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta53.jpg" alt="Carnival Row">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Urban Fantasy, Steampunk, Neo-Noir, Krimi</p>
+                    <h2>Inhalt</h2>
+                    <p>In einer Zukunft leben Menschen mit mystischen Kreaturen zusammen. Diese mussten ihre Heimat aufgrund eines Krieges verlassen. Doch der Frieden zwischen den Menschen und den nicht-menschlichen Flüchtlingen gerät bald ins Wanken.</p>
+                    <h2>Notes</h2>
+                    <p>Orlando Bloom und Cara Delevingne common W.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta54.jpg" alt="Supernatural">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Horror, Mystery, Action, Drama, Thriller, Abenteuer</p>
+                    <h2>Inhalt</h2>
+                    <p>Die Brüder Sam und Dean Winchester haben bereits als Kinder ihre Mutter verloren. Ihr Vater begab sich seitdem auf die Mission, den Mörder zu finden und auszuschalten. Seine Kinder nahm er mit und lehrte sie den Kampf gegen das Übernatürliche. Als allerdings der Vater der beiden auf mysteriöse Art und Weise verschwindet und Sams Freundin auf eine ähnliche Weise stirbt wie seine Mutter, beschließen die Brüder, sich gemeinsam auf die Suche nach ihrem Vater zu machen. Auf ihrer Reise bekämpfen sie jede übernatürliche Macht, die sich ihnen in den Weg stellt.</p>
+                    <h2>Notes</h2>
+                    <p>Die ersten vier Staffeln sind Bombe, der Rest ist meh.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta48.jpg" alt="Being Human">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Fantasy, Thriller, Drama, Comedy, Melodrama, Horror, Action</p>
+                    <h2>Inhalt</h2>
+                    <p>Ein Werwolf, ein Vampir und ein Geist bilden eine außergewöhnliche Wohngemeinschaft. Die dunklen Geheimnisse der drei Personen verbinden sie und gemeinsam versuchen sie, einander beim mystischen Leben zu unterstützen.</p>
+                    <h2>Notes</h2>
+                    <p>Ein Werwolf, ein Vampir und ein Geist gehen in eine Bar...</p>
+                </div>
+            </div>
         </div>
 
+        <!-- Cat SCIENCE FICTION -->
         <h1 id="scifi" class="cat">Science Fiction</h1>
         <div class="row triple">
             <div class="column" tabindex="0">
@@ -290,6 +371,7 @@
             </div>
         </div>
 
+        <!-- Cat SUPERHERO -->
         <h1 id="superhero" class="cat">Superhero</h1>
         <div class="row">
             <div class="column" tabindex="0">
@@ -359,6 +441,17 @@
                 </div>
             </div>
             <div class="column" tabindex="0">
+                <img src="images/TV/Insta41.jpg" alt="The Boys">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Superhero, Drama, Action, Dark Comedy</p>
+                    <h2>Inhalt</h2>
+                    <p>Wenn Superhelden zu mächtigen Superstars werden, missbrauchen einige von ihnen ihre Superkräfte. Die `Boys' stellen sich den scheinbar unbezwingbaren Gegnern, um die Wahrheit über `The Seven' und Vought ans Licht zu bringen.</p>
+                    <h2>Notes</h2>
+                    <p>Einzigartig. Genial. Funny. Viel gore tho. Sehr dark.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
                 <img src="images/TV/Insta12.jpg" alt="Umbrella Academy">
                 <div class="focus-content">
                     <h2>Genres</h2>
@@ -370,20 +463,21 @@
                 </div>
             </div>
             <div class="column" tabindex="0">
-                <img src="images/TV/Insta41.jpg" alt="The Boys">
+                <img src="images/TV/Insta42.jpg" alt="Heroes">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Superhero, Drama, Action, Dark Comedy</p>
+                    <p>Superhero, Science Fiction, Fantasy, Thriller, Drama</p>
                     <h2>Inhalt</h2>
-                    <p>Wenn Superhelden zu mächtigen Superstars werden, missbrauchen einige von ihnen ihre Superkräfte. Die `Boys' stellen sich den scheinbar unbezwingbaren Gegnern, um die Wahrheit über `The Seven' und Vought ans Licht zu bringen.</p>
+                    <p>Einige augenscheinlich völlig normale Menschen entdecken unabhängig voneinander, dass sie mit übernatürlichen Fähigkeiten begabt sind. Oft wissen sie zunächst nicht, wozu sie in der Lage sind, bis sie es durch Zufall herausfinden.</p>
                     <h2>Notes</h2>
-                    <p>Einzigartig. Genial. Funny. Viel gore tho. Sehr dark.</p>
+                    <p>Die ersten paar Staffeln sind super, danach ging es bergab. Zachary Quinto und Milo Ventimiglia sind cool tho.</p>
                 </div>
             </div>
         </div>
 
+        <!-- Cat COMEDY -->
         <h1 id="comedy" class="cat">Comedy</h1>
-        <div class="row triple">
+        <div class="row">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta10.jpg" alt="Brooklyn 99">
                 <div class="focus-content">
@@ -407,6 +501,39 @@
                 </div>
             </div>
             <div class="column" tabindex="0">
+                <img src="images/TV/Insta44.jpg" alt="New Girl">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Comedy, Sitcom</p>
+                    <h2>Inhalt</h2>
+                    <p>Nach einer schmerzhaften und plötzlichen Trennung von ihrem Verlobten braucht die junge Lehrerin Jessica Day dringend ein neues Zuhause. Sie zieht in eine Wohngemeinschaft mit den drei Single-Männern Nick, Schmidt und Winston.</p>
+                    <h2>Notes</h2>
+                    <p>Die ersten paar Staffeln fand ich super. Danach war immer dasselbe.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta49.jpg" alt="2 Broke Girls">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Comedy, Sitcom</p>
+                    <h2>Inhalt</h2>
+                    <p>Caroline ist eine wohlhabende Business-School-Absolventin, die alles verliert, als ihr vermögender Vater in einen Investmentbetrug verwickelt wird. Sie freundet sich mit Max an, einer talentierten Bäckerin und Kellnerin im Williamsburg Diner. Auch Caroline fängt bald darauf an, in dem Restaurant zu arbeiten. Die beiden werden Mitbewohnerinnen und planen, eines Tages einen Kuchenladen zu eröffnen.</p>
+                    <h2>Notes</h2>
+                    <p>Die ersten paar Staffeln sind SO gut.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta45.jpg" alt="Malcolm Mittendrin">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Comedy, Sitcom</p>
+                    <h2>Inhalt</h2>
+                    <p>Ein hochbegabtes Kind muss mit seiner exzentrischen Familie umgehen. Die Cleavers sind eine mittelständische US-Familie mit chaotischem Alltagsleben. Der kleine Malcom nutzt seine Intelligenz, um mit seinen Brüdern Streiche auszuhecken.</p>
+                    <h2>Notes</h2>
+                    <p>Ein Klassiker.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
                 <img src="images/TV/Insta16.jpg" alt="Modern Family">
                 <div class="focus-content">
                     <h2>Genres</h2>
@@ -419,6 +546,7 @@
             </div>
         </div>
 
+        <!-- Cat CRIME -->
         <h1 id="crime" class="cat">Crime</h1>
         <div class="row">
             <div class="column" tabindex="0">
@@ -478,8 +606,9 @@
             </div>
         </div>
 
+        <!-- Cat Thriller -->
         <h1 id="thriller" class="cat">Thriller</h1>
-        <div class="row triple">
+        <div class="row">
             <div class="column" tabindex="0">
                 <img src="images/TV/Insta11.jpg" alt="You">
                 <div class="focus-content">
@@ -489,6 +618,17 @@
                     <p>Der Buchhändler Joe bedient sich der modernen Technik, um die ambitionierte Autorin Beck dazu zu bringen, sich in ihn zu verlieben. Er wird jedoch immer besessener von ihr und schreckt vor nichts zurück, um seine Angebetete für sich zu gewinnen.</p>
                     <h2>Notes</h2>
                     <p>Was ein mf.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta52.jpg" alt="1899">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Thriller, Historic, Mystery, Fantasy, Horror</p>
+                    <h2>Inhalt</h2>
+                    <p>Eine Gruppe von Einwanderern auf einem Dampfschiff von London nach New York geraten in ein mysteriöses Rätsel, als sie ein auf dem offenen Meer treibendes Schiff mit Einwanderern finden. Bald wird ihre Reise zu einem Albtraum.</p>
+                    <h2>Notes</h2>
+                    <p>Sehr interessant. Gute Mystery-Serie. LGBTQ Representation.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -511,6 +651,28 @@
                     <p>Gezeigt werden die Abenteuer eines jugendlichen Spions und seine Missionen zur Rettung der Welt.</p>
                     <h2>Notes</h2>
                     <p>Ist es realistisch? Nicht wirklich. Ist es geilo? Ja.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta51.jpg" alt="Haus des Geldes">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Thriller, Drama, Heist</p>
+                    <h2>Inhalt</h2>
+                    <p>Ein Professor bereitet akribisch einen spektakulären Überfall auf die Banknotendruckerei und Münzprägeanstalt Spaniens vor. Seine acht Kumpane sollen ihm dabei helfen, seinen Plan perfekt auszuführen und die Polizei in die Irre zu führen.</p>
+                    <h2>Notes</h2>
+                    <p>Sehr gut, aber nur bis Staffel 4.</p>
+                </div>
+            </div>
+            <div class="column" tabindex="0">
+                <img src="images/TV/Insta55.jpg" alt="The A List">
+                <div class="focus-content">
+                    <h2>Genres</h2>
+                    <p>Thriller, Drama, Mystery</p>
+                    <h2>Inhalt</h2>
+                    <p>Eine junge Frau verbringt den Sommer in einem Camp. Doch bald wird der Taumsommer zum Albtraum.</p>
+                    <h2>Notes</h2>
+                    <p>Das ist BRAINLESS Teeny Fantasy Mystery Stuff. Hear me out... Summercamp Setting und Popular Mean Girl Protagonist?</p>
                 </div>
             </div>
         </div>
