--- a/tv.html
+++ b/tv.html
@@ -184,14 +184,14 @@
                 </div>
             </div>
             <div class="column" tabindex="0">
-                <img src="images/TV/Insta39.jpg" alt="Ratched">
+                <img src="images/TV/Insta6.jpg" alt="American Horror Story">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Horror, Thriller</p>
+                    <p>Horror, (Zombie-)Apokalypse, Drama, Thriller</p>
                     <h2>Inhalt</h2>
-                    <p>Die Krankenschwester Mildred Ratched fängt im Jahr 1947 ihren neuen Job als Krankenpflegerin in einer psychiatrischen Klinik an. Unter der makellosen Fassade der Krankenschwester lauert allerdings ein ziemliches Monster.</p>
+                    <p>American Horror Story ist eine amerikanische Antologieserie über Horrorphänomene aus der Vergangenheit und Gegenwart der Vereinigten Staaten.</p>
                     <h2>Notes</h2>
-                    <p>Sarah Paulson ist iconic.</p>
+                    <p>Rollercoaster. Unhinged. Manche Staffeln sind super, manche nicht. My TOP 3: Asylum, Freak Show, Murder House.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -206,14 +206,14 @@
                 </div>
             </div>
             <div class="column" tabindex="0">
-                <img src="images/TV/Insta6.jpg" alt="American Horror Story">
+                <img src="images/TV/Insta39.jpg" alt="Ratched">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Horror, (Zombie-)Apokalypse, Drama, Thriller</p>
+                    <p>Horror, Thriller</p>
                     <h2>Inhalt</h2>
-                    <p>American Horror Story ist eine amerikanische Antologieserie über Horrorphänomene aus der Vergangenheit und Gegenwart der Vereinigten Staaten.</p>
+                    <p>Die Krankenschwester Mildred Ratched fängt im Jahr 1947 ihren neuen Job als Krankenpflegerin in einer psychiatrischen Klinik an. Unter der makellosen Fassade der Krankenschwester lauert allerdings ein ziemliches Monster.</p>
                     <h2>Notes</h2>
-                    <p>Rollercoaster. Unhinged. Manche Staffeln sind super, manche nicht. My TOP 3: Asylum, Freak Show, Murder House.</p>
+                    <p>Sarah Paulson ist iconic.</p>
                 </div>
             </div>
         </div>
@@ -470,7 +470,7 @@
                     <h2>Inhalt</h2>
                     <p>Einige augenscheinlich völlig normale Menschen entdecken unabhängig voneinander, dass sie mit übernatürlichen Fähigkeiten begabt sind. Oft wissen sie zunächst nicht, wozu sie in der Lage sind, bis sie es durch Zufall herausfinden.</p>
                     <h2>Notes</h2>
-                    <p>Die ersten paar Staffeln sind super, danach ging es bergab. Zachary Quinto und Milo Ventimiglia sind cool tho.</p>
+                    <p>Die ersten paar Staffeln sind super, danach ging es bergab. Zachary Quinto Bonus.</p>
                 </div>
             </div>
         </div>
