--- a/tv.html
+++ b/tv.html
@@ -775,7 +775,7 @@
                 <img src="images/TV/Insta29.jpg" alt="Stranger Things">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Thriller, Horror, Drama, Mystery</p>
+                    <p>Mystery, Science Fiction, Thriller, Horror, Drama</p>
                     <h2>Inhalt</h2>
                     <p>In einer Kleinstadt in Indiana verschwindet der 12-jährige Will Byers. Vor allem seine
                         alleinerziehende Mutter macht sich Sorgen. Wills Freunde machen sich unterdessen auf die Suche
@@ -788,7 +788,7 @@
                 <img src="images/TV/Insta52.jpg" alt="1899">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Thriller, Historic, Mystery, Fantasy, Horror</p>
+                    <p>Mystery, Thriller, Historic, Fantasy, Horror</p>
                     <h2>Inhalt</h2>
                     <p>Eine Gruppe von Einwanderern auf einem Dampfschiff von London nach New York geraten in ein
                         mysteriöses Rätsel, als sie ein auf dem offenen Meer treibendes Schiff mit Einwanderern finden.
@@ -801,7 +801,7 @@
                 <img src="images/TV/Insta55.jpg" alt="The A List">
                 <div class="focus-content">
                     <h2>Genres</h2>
-                    <p>Thriller, Drama, Mystery</p>
+                    <p>Mystery, Thriller, Drama</p>
                     <h2>Inhalt</h2>
                     <p>Eine junge Frau verbringt den Sommer in einem Camp. Doch bald wird der Taumsommer zum Albtraum.
                     </p>
