--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="text">
             <h1>Mein Scrapbook</h1>
-            <p>Ich dokumentiere hier Dinge, die ich mag. That's it.</p>
+            <p>Ich dokumentiere hier Dinge, die ich mag. That's all.</p>
         </div>
     </div>
 </body>
