--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="books.html">Books</a></li>
         <li><a href="music.html">Music</a></li>
         <li><a href="anime.html">Anime</a></li>
+        <li><a href="tb.html">TB</a></li>
         <li style="float:right"><a class="active" href="about.html">Scrapbook</a></li>
     </ul>
 
@@ -43,6 +44,10 @@
 
         <a class="card" href="anime.html">
             <p>Anime</p>
+        </a>
+
+        <a class="card" href="tb.html">
+            <p>TB</p>
         </a>
 
     </div>
