--- a/music.html
+++ b/music.html
@@ -16,6 +16,7 @@
         <li><a href="books.html">Books</a></li>
         <li><a href="music.html">Music</a></li>
         <li><a href="anime.html">Anime</a></li>
+        <li><a href="tb.html">TB</a></li>
         <li style="float:right"><a class="active" href="about.html">Scrapbook</a></li>
     </ul>
 
