--- a/tb.html
+++ b/tb.html
@@ -22,7 +22,7 @@
 
     <div class="container">
         <h1>To be Read</h1>
-        <ul class="tb-list">
+        <ol class="tb-list">
             <li>If we were villains</li>
             <li>Kingdoms of Smoke</li>
             <li>The Secret History</li>
@@ -32,10 +32,10 @@
             <li>Die Mitternachtsbibliothek</li>
             <li>Scholomance</li>
             <li>Malamander</li>
-        </ul>
+        </ol>
 
         <h1>To be Watched</h1>
-        <ul class="tb-list">
+        <ol class="tb-list">
             <li>House of the Dragon</li>
             <li>Killing Eve</li>
             <li>Euphoria</li>
@@ -58,7 +58,7 @@
             <li>Club der magischen Dinge 2</li>
             <li>Dead End 2</li>
             <li>Carmen Sandiego 3 + 4</li>
-        </ul>
+        </ol>
     </div>
 </body>
 </html>
