--- a/tb.html
+++ b/tb.html
@@ -21,7 +21,7 @@
     </ul>
 
     <div class="container">
-        <h1>To be Read</h1>
+        <h1 class="freetext">To be Read</h1>
         <ol class="tb-list">
             <li>If we were villains</li>
             <li>Kingdoms of Smoke</li>
@@ -34,7 +34,7 @@
             <li>Malamander</li>
         </ol>
 
-        <h1>To be Watched</h1>
+        <h1 class="freetext">To be Watched</h1>
         <ol class="tb-list">
             <li>House of the Dragon</li>
             <li>Killing Eve</li>
