--- a/tb.html
+++ b/tb.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tv.html">TV</a></li>
-        <li><a href="cartoons.html">Cartoons</a></li>
-        <li><a href="movies.html">Movies</a></li>
-        <li><a href="books.html">Books</a></li>
-        <li><a href="music.html">Music</a></li>
-        <li><a href="anime.html">Anime</a></li>
-        <li><a href="tb.html">TB</a></li>
-        <li style="float:right"><a class="active" href="about.html">Scrapbook</a></li>
-    </ul>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tv.html">TV</a></li>
+            <li><a href="cartoons.html">Cartoons</a></li>
+            <li><a href="movies.html">Movies</a></li>
+            <li><a href="books.html">Books</a></li>
+            <li><a href="music.html">Music</a></li>
+            <li><a href="anime.html">Anime</a></li>
+            <li><a href="tb.html">TB</a></li>
+            <li class="title" style="float:right"><a class="active" href="about.html">Scrapbook</a></li>
+        </ul>
+    </header>
 
     <div class="container">
         <h1 class="freetext">To be Read</h1>
