--- a/tv.html
+++ b/tv.html
@@ -797,7 +797,7 @@
                         mysteriöses Rätsel, als sie ein auf dem offenen Meer treibendes Schiff mit Einwanderern finden.
                         Bald wird ihre Reise zu einem Albtraum.</p>
                     <h2>Notes</h2>
-                    <p>Sehr interessant. Gute Mystery-Serie. LGBTQ Representation.</p>
+                    <p>Gute Mystery-Serie. LGBTQ Representation.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
