--- a/tv.html
+++ b/tv.html
@@ -48,8 +48,7 @@
                     <p>Drama, Regency Romance, Historic</p>
                     <h2>Inhalt</h2>
                     <p>Während der Ballsaison im Jahr 1813 in der Londoner High Society versuchen die acht Geschwister
-                        der Familie Bridgerton die Liebe zu finden. Als die älteste Tochter eine Romanze mit dem Duke
-                        von Hastings vorgibt, entstehen langsam echte Gefühle.</p>
+                        der Familie Bridgerton die Liebe zu finden.</p>
                     <h2>Notes</h2>
                     <p>Warum ist das so addictive?</p>
                 </div>
