--- a/tv.html
+++ b/tv.html
@@ -547,7 +547,7 @@
                         Monocle, Spaceboy, The Rumor und die anderen müssen irgendwie miteinander auskommen und
                         zusammenarbeiten, um den Tod ihres Familienoberhaupts aufzuklären.</p>
                     <h2>Notes</h2>
-                    <p>Abgefuckt und funny. Liebenswerte Charaktere. Und hassenswerte Charaktere.</p>
+                    <p>Abgefuckt + Funny. Liebenswerte Charaktere. Hassenswerte Charaktere.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
