--- a/tv.html
+++ b/tv.html
@@ -560,7 +560,7 @@
                         übernatürlichen Fähigkeiten begabt sind. Oft wissen sie zunächst nicht, wozu sie in der Lage
                         sind, bis sie es durch Zufall herausfinden.</p>
                     <h2>Notes</h2>
-                    <p>Die ersten paar Staffeln sind super, danach ging es bergab. Zachary Quinto Bonus.</p>
+                    <p>Die ersten paar Staffeln sind super, danach gings bergab. Zachary Quinto Bonus.</p>
                 </div>
             </div>
         </div>
@@ -579,7 +579,7 @@
                         unorthodox zu - bis zu dem Zeitpunkt, an dem der neue Chef Ray Holt die Zügel in die Hand nimmt.
                     </p>
                     <h2>Notes</h2>
-                    <p>Die perfekte Mischung aus Comedy und Crime.</p>
+                    <p>Perfekte Mischung aus Comedy und Crime.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -605,7 +605,7 @@
                         Jessica Day dringend ein neues Zuhause. Sie zieht in eine Wohngemeinschaft mit den drei
                         Single-Männern Nick, Schmidt und Winston.</p>
                     <h2>Notes</h2>
-                    <p>Die ersten paar Staffeln fand ich super. Danach war immer dasselbe.</p>
+                    <p>Die ersten paar Staffeln super. Danach wars immer dasselbe.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
@@ -633,7 +633,7 @@
                         mittelständische US-Familie mit chaotischem Alltagsleben. Der kleine Malcom nutzt seine
                         Intelligenz, um mit seinen Brüdern Streiche auszuhecken.</p>
                     <h2>Notes</h2>
-                    <p>Ein Klassiker.</p>
+                    <p>Klassiker.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
