--- a/tv.html
+++ b/tv.html
@@ -374,7 +374,7 @@
                         Mutter, beschließen die Brüder, sich gemeinsam auf die Suche nach ihrem Vater zu machen. Auf
                         ihrer Reise bekämpfen sie jede übernatürliche Macht, die sich ihnen in den Weg stellt.</p>
                     <h2>Notes</h2>
-                    <p>Die ersten vier Staffeln sind Bombe, der Rest ist meh.</p>
+                    <p>Die ersten fünf Staffeln sind Bombe, der Rest ist meh.</p>
                 </div>
             </div>
             <div class="column" tabindex="0">
